# niwanowa-RSSReader

./: .env.example  Dockerfile  docker-compose.yml  dynamo.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
bot/: main.py
copilot/: .workspace
copilot/bot/: manifest.yml
copilot/bot/addons/: rss-bot.yml
copilot/pipelines/niwanowa-rssreader-main/: buildspec.yml  manifest.yml
src/: bot.py
